<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.internshipsfera.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="80dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@drawable/avatar" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/rate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="@id/avatar"
                app:layout_constraintStart_toStartOf="@id/avatar"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@drawable/rate" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/f_4_7"
                android:fontFamily="@font/inter"
                android:textColor="@color/contents"
                android:textSize="24sp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@id/rate"
                app:layout_constraintStart_toStartOf="@+id/rate"
                />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/alise_peterson"
                android:textColor="@color/contents"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <ImageView
                android:id="@+id/ic_world"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:srcCompat="@drawable/ic_world"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_languages"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ic_world"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintEnd_toStartOf="@id/tv_choose"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/inter"
                android:gravity="center|start"
                android:text="@string/languages"
                android:textColor="@color/contents"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_choose"
                style="@style/Choose"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:text="@string/choose"/>

            <ImageView
                android:id="@+id/ic_place"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_world"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/place"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ic_place"
                app:layout_constraintTop_toBottomOf="@+id/tv_languages"
                app:layout_constraintEnd_toStartOf="@id/tv_choose_second"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/inter"
                android:gravity="center|start"
                android:text="@string/address"
                android:textColor="@color/contents"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_choose_second"
                style="@style/Choose"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="54dp"
                android:gravity="center_horizontal"
                android:text="@string/choose"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_first"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="372dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="3:1"
                tools:ignore="SpeakableTextPresentCheck"
                tools:itemCount="4"
                tools:listitem="@layout/item_first_line" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_quest"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rc_first"
                app:layout_constraintEnd_toStartOf="@id/btn_people"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal"
                android:text="@string/questionnaires" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_people"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/btn_quest"
                app:layout_constraintTop_toBottomOf="@+id/rc_first"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:text="@string/people" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_quest"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/about_me"
                app:hintTextAppearance="@style/AboutText"
                android:textColorHint="@color/edit_text"
                app:boxStrokeColor="@color/edit_text"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                app:counterTextAppearance="@style/CounterEditText"
                app:counterTextColor="@color/edit_text"
                app:hintTextColor="@color/edit_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:fontFamily="@font/inter"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/AboutText"
                    android:maxLength="300"
                    android:lineHeight="24dp"
                    android:maxLines="2"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/large_text"
                    android:textColor="@color/contents"
                    android:textColorLink="@color/edit_text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_dream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                android:fontFamily="@font/inter"
                android:text="@string/dream_and_get"
                android:textColor="@color/contents"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:checked="true"
                android:enabled="true"
                app:thumbTint="#9575CD"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_wishes"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_dream"
                android:text="@string/wishes"/>

            <TextView
                android:id="@+id/tv_moments"
                style="@style/RcText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_wishes"
                android:layout_marginStart="16dp"
                android:text="@string/moments"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_moments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_moments"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="3:1"
                android:overScrollMode="never"
                tools:itemCount="6"
                tools:listitem="@layout/item_moments"/>

            <TextView
                android:id="@+id/tv_chronic"
                style="@style/RcText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rc_moments"
                android:layout_marginStart="16dp"
                android:text="@string/chronicles"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_chronicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_chronic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layout_constraintDimensionRatio="1:1"
                tools:itemCount="12"
                tools:listitem="@layout/item_chronicles"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>